src/test/resources/typeerrors/MockCharIntMismatch.java
public class MockCharIntMismatch {
    char test = 42;
}